fixed same colour text and background in dark mode

--- a/cps630-app/src/styles/dbMaintain.css
+++ b/cps630-app/src/styles/dbMaintain.css
@@ -173,4 +173,5 @@ table button:last-child:hover {
   background-color: #f9f9f9;
   border-radius: 4px;
   border: 1px solid #ddd;
+  color: #333;
 } 
