--- a/cps630-app/src/styles/productCard.css
+++ b/cps630-app/src/styles/productCard.css
@@ -37,6 +37,7 @@
 .product-info {
   padding: 15px;
   text-align: center;
+  background-color: #f1f1f1;
 }
 
 .product-name {
